plugins {
    id 'java'
    id 'eclipse'
    id 'net.neoforged.moddev' version '2.0.140'
}

version = project.mod_version
group = "simelectricity"

base {
    archivesName = "SimElectricity"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ["--add-modules", "jdk.incubator.vector"]
}

dependencies {
    implementation project(':librikka')
}

neoForge {
    version = project.neoforge_version

    runs {
        client {
            client()
            systemProperty 'neoforge.logging.markers', 'SCAN,REGISTRIES'
            systemProperty 'neoforge.logging.console.level', 'debug'
        }

        server {
            server()
            systemProperty 'neoforge.logging.markers', 'SCAN,REGISTRIES'
            systemProperty 'neoforge.logging.console.level', 'debug'
        }

        data {
            data()
            programArguments.addAll '--mod', 'sime_essential', '--all', '--output', file('src/generated/resources/').absolutePath, '--existing', file('src/main/resources/').absolutePath
        }
    }

    mods {
        simelectricity {
            sourceSet sourceSets.main
        }
    }
}

sourceSets {
    main {
        resources {
            srcDir "src/generated/resources"
            exclude '.cache'
            exclude 'Thumbs.db'
        }
    }
}

jar {
    manifest {
        attributes([
            "Specification-Title": "simelectricity",
            "Specification-Vendor": "CISM",
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": "${project.version}",
            "Implementation-Vendor" :"CISM",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}
